Fixed the size of the component in compact mode.

--- a/src/components/people/PersonCard/styles.less
+++ b/src/components/people/PersonCard/styles.less
@@ -24,7 +24,7 @@
     }
 
     &.compact {
-        --details-spacing: calc(var(--grid-unit) * 2px);
-        --name-spacing: calc(var(--grid-unit) * 1px);
+        --details-spacing: calc(var(--grid-unit) * 1px);
+        --name-spacing: calc(var(--grid-unit) * .25px);
     }
 }
