--- a/src/components/general/Dropdown/styles.less
+++ b/src/components/general/Dropdown/styles.less
@@ -6,4 +6,11 @@
     pointer-events: all;
     background: white;
     border-radius: 4px;
+
+    &.justifyLeft {
+        right: 50%;
+    }
+    &.justifyRight {
+        left: 50%;
+    }
 }
