--- a/src/components/general/Dropdown/styles.less
+++ b/src/components/general/Dropdown/styles.less
@@ -8,9 +8,9 @@
     border-radius: 4px;
 
     &.justifyLeft {
-        right: 50%;
+        right: 0;
     }
     &.justifyRight {
-        left: 50%;
+        left: 0;
     }
 }
