Added justification to dropdown (#96)
* Added justification to dropdown

* CR changes

--- a/src/components/general/Dropdown/styles.less
+++ b/src/components/general/Dropdown/styles.less
@@ -6,4 +6,11 @@
     pointer-events: all;
     background: white;
     border-radius: 4px;
+
+    &.justifyLeft {
+        right: 0;
+    }
+    &.justifyRight {
+        left: 0;
+    }
 }
