made som visual adjustments to the orgchart and more

--- a/src/components/general/FilterPane/styles.less
+++ b/src/components/general/FilterPane/styles.less
@@ -173,7 +173,10 @@
     &.comfortable {
         padding: calc(var(--grid-unit) * 2px);
         width: calc(var(--grid-unit) * 39px);
-
+        
+        &.isCollapsed{
+            padding: 0;
+        }
         section {
             padding-bottom: calc(var(--grid-unit) * 2px);
             margin-bottom: calc(var(--grid-unit) * 4px);
