added linked position  in orgchart

--- a/src/components/org/OrgChart/components/styles.less
+++ b/src/components/org/OrgChart/components/styles.less
@@ -9,12 +9,18 @@
         flex-direction: row;
     }
 }
-.link{
+
+.link {
     stroke: #b9b9b8;
     stroke-width: 1px;
     fill: none;
     shape-rendering: crispEdges;
+    
+    &.isLinked{
+        stroke-dasharray: 3;
+    } 
 }
+
 .card, .labelRect, .breadCrumbRect{
     fill: none;
 }
