Added reporting path link supprot

--- a/src/components/org/ReportingPath/components/styles.less
+++ b/src/components/org/ReportingPath/components/styles.less
@@ -4,6 +4,10 @@
     stroke-width: 1px;
     fill: none;
     shape-rendering: crispEdges;
+
+    &.isLinked{
+        stroke-dasharray: 3;
+    }
 }
 .card, .labelRect{
     fill: none;
