Added linked icon several places

--- a/src/components/org/PositionCard/styles.less
+++ b/src/components/org/PositionCard/styles.less
@@ -141,12 +141,18 @@
             line-height: 16px;
         }
 
-        .externalId {
+        .additionalInfo {
+            display: flex;
+            align-items: center;
             font-size: 11px;
             line-height: 16px;
             position: absolute;
             top: 0;
             right: 0;
+
+            .externalId{
+                padding-left: calc(var(--grid-unit) * .5px);
+            }
         }
 
         .expandButton {
