--- a/src/components/org/PositionCard/styles.less
+++ b/src/components/org/PositionCard/styles.less
@@ -61,6 +61,10 @@
                 cursor: pointer;
             }
         }
+
+        &.isLinked {
+            border: 1px dashed var(--color-black-alt3);
+        }
     }
 
     .photoContainer {
