Added new badge for local accounts. Fixed issue with tooltip

--- a/src/components/people/PersonPhoto/styles.less
+++ b/src/components/people/PersonPhoto/styles.less
@@ -72,6 +72,10 @@
         &.consultant, &.externalHire {
             background: var(--color-red);
         }
+
+        &.local {
+            background: var(--color-black-alt3);
+        }
     
         &.xlarge {
             &.comfortable {
