Reduced spacing in PersonCard component between name and email

--- a/src/components/people/PersonCard/styles.less
+++ b/src/components/people/PersonCard/styles.less
@@ -20,7 +20,7 @@
 
     &.comfortable {
         --details-spacing: calc(var(--grid-unit) * 2px);
-        --name-spacing: calc(var(--grid-unit) * 1px);
+        --name-spacing: calc(var(--grid-unit) * .25px);
     }
 
     &.compact {
