--- a/src/components/org/PositionCard/styles.less
+++ b/src/components/org/PositionCard/styles.less
@@ -122,6 +122,7 @@
         .positionName {
             font-size: 16px;
             margin-bottom: var(--position-name-spacing);
+            line-height: 16px;
             color: var(--color-primary);
 
             span {            
@@ -131,6 +132,7 @@
 
         .assignedPersonName {
             font-size: 16px;
+            line-height: 16px;
             margin-bottom: var(--assigned-person-name-spacing);
             margin-right: calc(var(--grid-unit) * 6px);
         }
