Removed calc in modalSide because of bug preventing transitionEnd to not fire in edge

--- a/src/components/general/SideSheet/Modal/styles.less
+++ b/src/components/general/SideSheet/Modal/styles.less
@@ -6,7 +6,7 @@
     top: 0; bottom: 0;
     right: 0;
     width: var(--modal-size);
-    transform: translateX(calc(var(--grid-unit)* 80px));
+    transform: translateX(640px);
     background: var(--color-white);
     overflow: hidden;
     display: flex;
