fixed icon colors on personPhoto

--- a/src/components/people/PersonPhoto/styles.less
+++ b/src/components/people/PersonPhoto/styles.less
@@ -78,6 +78,10 @@
         }
 
         &.local {
+            background: var(--color-black-alt3);
+        }
+
+        &.employee{
             background: var(--color-purple);
         }
     
