--- a/src/components/general/SideSheet/Standard/styles.less
+++ b/src/components/general/SideSheet/Standard/styles.less
@@ -26,6 +26,7 @@
         top: 0;
         bottom: 0;
         right: 0;
+        position: fixed;
         transition: transform .1s ease-out;
         pointer-events: all;
     }
@@ -49,7 +50,7 @@
         justify-content: center;
         align-items: center;
     }
-    
+
     .title {
         font-size: var(--header-font-size);
         line-height: var(--header-line-height);
