--- a/src/components/general/Button/styles/index.less
+++ b/src/components/general/Button/styles/index.less
@@ -10,6 +10,7 @@
     cursor: pointer;
     border-radius: var(--corner-radius);
     box-sizing: border-box;
+    text-decoration: none;
 
     & + & {
         margin-left: calc(var(--grid-unit) * 1px) !important;
