Responsive header on small screens

--- a/src/components/core/Header/styles.less
+++ b/src/components/core/Header/styles.less
@@ -1,4 +1,5 @@
 @import "~styles/mixins.less";
+@import '~styles/variables.less';
 
 .container {
     grid-area: header;
@@ -14,6 +15,13 @@
     left: 0;
     right: 0;
     z-index: 2;
+
+    @media (max-width: @mobile-max-width) {
+        grid-template-areas: "start logo aside"
+                             "content content aside";
+        grid-template-columns: max-content auto max-content;
+        grid-template-rows: 50% 50%;
+    }
 
     &.comfortable {
         padding: 0 .grid-unit(2px)[];
