width 100% for tabs container

--- a/src/components/general/Tabs/styles.less
+++ b/src/components/general/Tabs/styles.less
@@ -3,7 +3,8 @@
     flex-direction: column;
     overflow: hidden;
     height: 100%;
-
+    width: 100%;
+    
     .tabsPane {
         display: flex;
         flex-direction: row;
