Position back to realtive

--- a/src/components/org/PositionCard/styles.less
+++ b/src/components/org/PositionCard/styles.less
@@ -7,7 +7,7 @@
         background-color: var(--color-white);
         border: 1px solid var(--color-black-alt4);
         border-radius: 4px;
-        position: fixed;
+        position: relative;
         transition: box-shadow .15s;
         
         &.isExternal, &.isConsultant, &.isExternalHire {
