changed the styling so the header and the content just have bottom borders

--- a/src/components/general/Accordion/styles.less
+++ b/src/components/general/Accordion/styles.less
@@ -15,8 +15,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            border: 1px solid var(--color-black-alt4);
-            border-top: none;
+            border-bottom: 1px solid var(--color-black-alt4);
             cursor: pointer;
 
             .label {
@@ -76,7 +75,7 @@
             
             .content{
                 height: 100%;
-                border: 1px solid var(--color-black-alt4);
+                border-bottom: 1px solid var(--color-black-alt4);
                 border-top: none;
                 padding: .grid-unit(2px)[];
             }
