--- a/src/components/people/PersonPhoto/styles.less
+++ b/src/components/people/PersonPhoto/styles.less
@@ -66,15 +66,23 @@
         height: var(--iconContainerSize);
 
         &.affiliate {
-            background: var(--color-secondary-alt2);
+            background: #ff93ee;
         }
     
-        &.consultant, &.externalHire {
-            background: var(--color-red);
+        &.consultant {
+            background: var(--color-secondary);
+        }
+
+        &.externalHire{
+            background: var(--color-primary-accent);
         }
 
         &.local {
             background: var(--color-black-alt3);
+        }
+
+        &.employee{
+            background: var(--color-purple);
         }
     
         &.xlarge {
