--- a/src/components/general/Accordion/styles.less
+++ b/src/components/general/Accordion/styles.less
@@ -17,6 +17,9 @@
             align-items: center;
             border-bottom: 1px solid var(--color-black-alt4);
             cursor: pointer;
+            &.isOpen{
+                border: none;
+            }
 
             .label {
                 font-size: var(--header-font-size);
