--- a/src/components/org/PositionCard/styles.less
+++ b/src/components/org/PositionCard/styles.less
@@ -80,9 +80,9 @@
         }
 
         .linkedIcon{
-                
-           position: relative;
+            position: relative;
             display: flex;
+            justify-content: center;
         }
     }
 
