--- a/src/components/org/PositionCard/styles.less
+++ b/src/components/org/PositionCard/styles.less
@@ -94,6 +94,10 @@
             max-width: 100%;
         }
 
+        .basePositionName {
+            max-width: 70%;
+        }
+
         .basePositionName, .location, .period {
             font-size: var(--small-section-font-size);
             line-height: var(--small-section-line-height);
