added styling for the overflowing names

--- a/src/components/org/PositionCard/styles.less
+++ b/src/components/org/PositionCard/styles.less
@@ -103,6 +103,10 @@
             line-height: var(--small-section-line-height);
         }
 
+        .positionNameOwerflow {
+            max-width: 70%;
+        }
+
         .period {
             padding-bottom: 8px;
         }
