--- a/src/components/org/PositionCard/styles.less
+++ b/src/components/org/PositionCard/styles.less
@@ -50,6 +50,8 @@
     .photoIconContainer {
         user-select: none;
         flex-shrink: 0;
+        display: flex;
+        flex-direction: column;
 
         .personIconContainer {
             width: calc(var(--grid-unit) * 5px);
