--- a/src/components/org/PositionCard/styles.less
+++ b/src/components/org/PositionCard/styles.less
@@ -47,9 +47,11 @@
         }
     }
 
-    .photoContainer {
+    .photoIconContainer {
         user-select: none;
         flex-shrink: 0;
+        display: flex;
+        flex-direction: column;
 
         .personIconContainer {
             width: calc(var(--grid-unit) * 5px);
@@ -77,6 +79,12 @@
                 align-items: center;
                 justify-content: center;
             }
+        }
+
+        .linkedIcon{
+            position: relative;
+            display: flex;
+            justify-content: center;
         }
     }
 
@@ -127,20 +135,18 @@
             display: flex;
             margin-right: calc(var(--grid-unit) * 6px);
         }
-
-        .additionalInfo {
-            display: flex;
-            align-items: center;
-            font-size: var(--small-section-font-size);
-            line-height: var(--small-section-line-height);
-            position: absolute;
-            top: 0;
-            right: 0;
-
-            .externalId{
+    
+        .externalId {
                 padding-left: calc(var(--grid-unit) * .5px);
-            }
+                position: absolute;
+                top: 0;
+                right: 0;
+                display: flex;
+                align-items: center;
+                font-size: var(--small-section-font-size);
+                line-height: var(--small-section-line-height);
         }
+       
 
         .expandButton {
             position: absolute;
