Added 1px height to tab content to remedy flexbox issue

--- a/src/components/general/Tabs/styles.less
+++ b/src/components/general/Tabs/styles.less
@@ -98,9 +98,11 @@
             }
         }
     }
+    
     .tabContent {
         width: 100%;
         flex-grow: 1;
+        height: 1px; // flexbox bug
     }
     
 }
