--- a/src/components/org/PositionCard/styles.less
+++ b/src/components/org/PositionCard/styles.less
@@ -108,10 +108,6 @@
             line-height: var(--small-section-line-height);
         }
 
-        .period {
-            padding-bottom: calc(var(--grid-unit) * 1px - 3px);
-        }
-
         .positionName {
             font-size: var(--big-section-font-size);
             margin-bottom: var(--position-name-spacing);
@@ -166,6 +162,7 @@
             border-radius: 4px;
             overflow: hidden;
             width: calc(var(--grid-unit) * 23px);
+            padding-top: calc(var(--grid-unit) * .5px);
 
             .instance{
                 height: 100%;
