--- a/src/components/org/PositionCard/styles.less
+++ b/src/components/org/PositionCard/styles.less
@@ -162,7 +162,7 @@
             border-radius: 4px;
             overflow: hidden;
             width: calc(var(--grid-unit) * 23px);
-            padding-top: calc(var(--grid-unit) * .5px);
+            margin-top: calc(var(--grid-unit) * .5px);
 
             .instance{
                 height: 100%;
