--- a/src/components/org/PositionCard/styles.less
+++ b/src/components/org/PositionCard/styles.less
@@ -155,7 +155,7 @@
                 top: 0;
                 width: 100%;
                 align-items: center;
-                padding-top: 8px;
+                padding-top: calc(var(--grid-unit) * 1px)
         } 
 
         .expandButton {
